@@ -366,3 +366,7 @@ Wed Jul 30 09:32:01 CEST 2003 <ddouxchamps@users.sf.net>
       compatibility.
     * examples/dc1394_vloopback.c: minor bugfixes.
     * autogen.sh: add missing libtoolize.
+	
+2004-01-14 Damien <ddouxchamps@users.sf.net>
+    * fixed a bug related to IIDC version in format7 functions. All registers specific 
+      of v1.30 are now only probed if the version is 1.30.
